# Grasp-Pose-Generation

./: .gitignore
grasping_control/: setup.cfg
my_turtle_controller/: package.xml  setup.py
my_turtle_controller/my_turtle_controller/: draw_circle.py
myp_scripts/: grasp_executor_myp.py
src/fp_core_msgs-v5.0/: CMakeLists.txt  README.md  package.xml
src/fp_core_msgs-v5.0/action/: ExecuteFunction.action
src/geosacs_msgs/: CMakeLists.txt  package.xml
src/grasp_pose_client/: README.md  package.xml  setup.cfg  setup.py
src/grasp_pose_client/doc/: commanded_pose_consumption.md  coordinate_transform_chain.md  overview.md
src/grasp_pose_client/grasp_pose_client/: capture_replay_node.py  grasp_logger.py  grasp_pose_client_node.py  http_client.py  image_conversion.py
src/grasp_pose_client/launch/: capture_replay.launch.py  grasp_pose_client.launch.py  grasp_pose_client_with_replay.launch.py
src/grasp_pose_client_msgs/: CMakeLists.txt  package.xml
src/grasp_pose_client_msgs/srv/: RequestGrasp.srv
src/lio_robot_model/fp_materials/: CMakeLists.txt  package.xml
src/lio_robot_model/lio_description/: CMakeLists.txt  package.xml
src/lio_robot_model/lio_description/launch/: lio_description.launch.py  test.launch.py
src/lio_robot_model/lio_description/rviz/: lio_rviz.rviz  lio_rviz2.rviz
src/lio_robot_model/lio_description/urdf/: lio.urdf  lio.urdf.xacro  test.urdf
src/lio_robot_model/p_arm_description/: CMakeLists.txt  package.xml
src/lio_robot_model/p_arm_description/urdf/: p_arm.urdf.xacro
src/lio_robot_model/p_camera_description/: CMakeLists.txt  package.xml
src/lio_robot_model/p_care_description/: CMakeLists.txt  package.xml
src/lio_robot_model/p_care_description/launch/: p_care.launch.py
src/lio_robot_model/p_care_description/urdf/: p_care.urdf.xacro
src/lio_robot_model/p_grip_description/: CMakeLists.txt  package.xml
src/lio_robot_model/p_grip_description/urdf/: p_grip.urdf.xacro
src/lio_robot_model/p_hand_description/: CMakeLists.txt  package.xml
src/lio_robot_model/p_rob_description/: CMakeLists.txt  package.xml
src/lio_robot_model/platform_description/: CMakeLists.txt  package.xml
src/lio_robot_model/platform_description/launch/: platform_description.launch.py
src/lio_robot_model/platform_description/urdf/: platform_1a.urdf.xacro  platform_1b.urdf.xacro  platform_1c.urdf.xacro  platform_PCAc.urdf.xacro  platform_proto1.urdf.xacro  platform_proto2.urdf.xacro
src/lio_specific_pkg_ros2/: package.xml  setup.cfg  setup.py
src/lio_specific_pkg_ros2/lio_specific_pkg_ros2/: ik_interface_lio_ros2.py  ik_stream_to_action.py  ik_stream_to_action_working_slow_version.py  joint_io.py  move_joint.py  myp_application.py
src/lio_teleop/: package.xml  setup.cfg  setup.py
src/lio_teleop/launch/: full.launch.py  lio_teleoperation.launch.py
src/lio_teleop/lio_teleop/: joy_driver.py  lio_teleop_joy.py  velocity_controller.py
src/lio_teleop/rviz/: lio_teleop.rviz
src/panda-ik/: CMakeLists.txt  package.xml
src/panda-ik/cpp_src/: main.cpp  main_hybrid_not_tested.cpp  main_teleop.cpp
src/panda-ik/launch/: panda_ik.launch.py
src/panda-ik/src/: lib.rs
src/panda-ik/urdfs/: lio_arm.urdf  lio_arm_reframed.urdf
src/rail_follower/: package.xml  setup.py
src/rail_follower/rail_follower/: rail_follower_node.py
src/rail_follower/scripts/: rail_follower_node
