<?xml version="1.0"?>
<package format="3">
  <name>fp_materials</name>
  <version>0.0.1</version>
  <description>ROS 2 version of the fp_materials package</description>

  <!-- Maintainership -->
  <maintainer email="mpm@todo.todo">mpm</maintainer>

  <!-- Choose a real license for your project -->
  <license>BSD</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Example runtime / build dependencies (uncomment or add real ones later) -->
  <!-- <depend>rclcpp</depend> -->
  <!-- <depend>std_msgs</depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

