<?xml version="1.0"?>
<package format="3">
  <name>lio_description</name>
  <version>0.0.1</version>
  <description>Robot description package for LIO</description>

  <maintainer email="pi@todo.todo">pi</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>p_camera_description</exec_depend>
  <exec_depend>p_arm_description</exec_depend>
  <exec_depend>p_grip_description</exec_depend>
  <exec_depend>platform_description</exec_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

