<?xml version="1.0"?>
<package format="3">
  <name>p_arm_description</name>
  <version>0.0.1</version>
  <description>ROS 2 version of p_arm_description package.</description>

  <maintainer email="mpm@todo.todo">mpm</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- No direct dependencies like rclcpp needed, as this is a description package -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

