<?xml version="1.0"?>
<package format="3">
  <name>p_camera_description</name>
  <version>0.0.1</version>
  <description>ROS 2 version of the p_camera_description package</description>

  <maintainer email="mra@todo.todo">mra</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

