<?xml version="1.0"?>
<package format="3">
  <name>p_grip_description</name>
  <version>0.0.1</version>
  <description>Gripper model for ROS 2</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>